<resources>
    <string name="app_name">Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_order">My Order</string>
    <string name="profile">profile</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="explore">Explore</string>
    <string name="adidas">Adidas</string>
    <string name="item">item</string>
    <string name="my_cart">My Cart</string>
    <string name="subtotal">Subtotal</string>
</resources>